--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-three/fiber": "^9.4.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "env": "^0.0.2",
     "face-api.js": "^0.22.2",
     "gsap": "^3.13.0",
     "lenis": "^1.3.15",
